Fixed alignment issue with maps in shelter list

--- a/src/shelters/ShelterList.css
+++ b/src/shelters/ShelterList.css
@@ -30,7 +30,11 @@
   align-items: center;
   flex: 2;
   text-align: left;
-  justify-content: flex-start;
+  justify-content: space-between;
+}
+
+.card-body {
+  flex: 0 1 auto;
 }
 
 .shelterMap {
